--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "storm-react-diagrams-arrowhead",
+	"name": "storm-react-diagrams",
 	"version": "5.2.1",
 	"repository": {
 		"type": "git",
